# sgm_gpu_ros

./: .gitmodules  CMakeLists.txt  README.md  configuration.h  disparity_method.cu  disparity_method.h  main.cu  nodelet_plugin.xml  package.xml
data/: test_input.bag
disparity_srv/: .CMakeLists.txt.swp  CMakeLists.txt  package.xml
docker/: .env  docker-compose.development.yml  docker-compose.yml  dockerfile  ros_entrypoint.sh
include/: disparity_service_test_client.h  sgm_gpu_node.h  sgm_gpu_nodelet.h  sgm_gpu_server.h
include/sgm/: configuration.h  cost_aggregation.h  debug.h  disparity_method.h  hamming_cost.h  median_filter.h  right_disparity.h  util.h
include/sgm_gpu/: configuration.h  cost_aggregation.h  costs.h  debug.h  disparity_method.h  hamming_cost.h  left_right_consistency.h  median_filter.h  sgm_gpu.h  sgm_gpu_nodelet.h  util.h
launch/: test.launch  test_service.launch
sgm_gpu/include/: sgm_gpu_server.h
sgm_gpu/include/sgm/: costs.h  left_right_consistency.h
sgm_gpu/launch/: test.launch
sgm_gpu/src/sgm/: disparity_method.cu  median_filter.cu
src/: debug.cu  disparity_method.cu  disparity_service_test_client.cpp  disparity_service_test_client_node.cpp  sgm_gpu.cu  sgm_gpu_node.cpp  sgm_gpu_nodelet.cu  sgm_gpu_server.cu  sgm_gpu_server_node.cu
src/sgm/: configuration.h  cost_aggregation.h  costs.cu  debug.cu  disparity_method.cu  hamming_cost.cu  left_right_consistency.cu  median_filter.cu  right_disparity.cu
src/sgm_gpu/: costs.cu  debug.cu  disparity_method.cu  hamming_cost.cu  left_right_consistency.cu  median_filter.cu
srv/: EstimateDisparity.srv
