<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?> 

<package format="2">
  <name>sgm_gpu</name>
  <version>0.0.0</version>
  <description>A ROS package of Semi-Global Matching on the GPU</description>
  <maintainer email="fujimoto@aisl.cs.tut.ac.jp">Hironori Fujimoto</maintainer>
  <license>GPL3</license>
	<url type="website">https://github.com/ActiveIntelligentSystemsLab/sgm_gpu_ros</url>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>cv_bridge</depend>
  <depend>image_geometry</depend>
  <depend>image_transport</depend>
  <depend>message_filters</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>stereo_msgs</depend>
  <!-- rosdep keys -->
  <depend>libopencv-dev</depend>
  <exec_depend>nvidia-cuda</exec_depend>
  <build_depend>nvidia-cuda-dev</build_depend>
</package>

